<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.endurancerobots.selfiebotdroid.Bluetooth.BtDevicePickingActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbBTDevPick_PickDevice"
        />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_devices"
        android:layout_gravity="center_horizontal|top"
        android:layout_above="@+id/bnBtDevicePicking_BtSettings" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bnBtDevPick_BtSettings"
        android:onClick="onBtSettingsClick"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/bnBtDevicePicking_BtSettings"
        android:layout_above="@+id/bnBtDevicePicking_Back" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bnBTDevPick_Back"
        android:onClick="onBackClick"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/bnBtDevicePicking_Back"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
